# bacteria_design

./: Git_reminder.md  LICENSE  README.md  pyproject.toml
