[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "bacteria_design"
dynamic = ["version", "dependencies"]
requires-python = ">=3.12"
authors = [{ name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" }, { name = "Thomas Nowak", email = "thomas@thomasnowak.net" }]
maintainers = [{ name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" }, { name = "Thomas Nowak", email = "thomas@thomasnowak.net" }]
description = "Computational engineering library for the design of bacteria"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bacteria", "design"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.ruff]
line-length = 120

fix = true

lint.pydocstyle.convention = "google"

format.docstring-code-format = true
format.docstring-code-line-length = 120

lint.select = ["ALL"]

lint.ignore = ["COM812", "ISC001"]

lint.per-file-ignores = { "**/examples/*" = [
  "ANN",
  "D",
  "INP001",
  "T201",
], "**/tests/**/*" = [
  "ANN",
  "D",
  "INP001",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
] }

lint.flake8-tidy-imports.ban-relative-imports = "all"

lint.flake8-pytest-style.fixture-parentheses = false
lint.flake8-pytest-style.mark-parentheses = false
